--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     <script>
     // --- 1. KONFIGURASI SUPABASE (PASTIKAN BENAR) ---
-    const supabaseUrl = 'MASUKKAN_URL_SUPABASE_ANDA';
-    const supabaseKey = 'MASUKKAN_KEY_ANON_ANDA';
+    const supabaseUrl = 'https://cannnetigbzlesfhhiwr.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNhbm5uZXRpZ2J6bGVzZmhoaXdyIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY1NDQ1MDksImV4cCI6MjA4MjEyMDUwOX0.z9W9mPPoLlPoa7XdL6I0rsg9EeQy54wfNgyJ_tzF_Ns';
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
     // --- SKEMA KOLOM TAMPILAN ---
