--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
   <link rel="stylesheet" href="./styles.css" />
 
   <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <!-- XLSX parser -->
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.19.3/dist/xlsx.full.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  
+  <!-- XLSX parser (SheetJS) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/xlsx@0.19.3/dist/xlsx.full.min.js"></script>
+  
+  <!-- App -->
+  <script defer src="./app.js"></script>
+
 </head>
 
 <body>
@@ -93,7 +98,5 @@
       <span class="dim">Upload → Histori → Skor</span>
     </footer>
   </div>
-
-  <script src="./app.js"></script>
 </body>
 </html>
