--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   
   <!-- XLSX parser (SheetJS) -->
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js"></script>
-  
+  <script defer
+  src="https://cdn.jsdelivr.net/npm/xlsx@0.19.3/dist/xlsx.full.min.js"
+  onerror="var s=document.createElement('script'); s.src='https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js'; s.defer=true; document.head.appendChild(s);"></script>
+
   <!-- App -->
   <script defer src="./app.js"></script>
 
