--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <div class="panel-title">Sinyal Swing (Top)</div>
         <div class="row wrap">
           <input id="search" class="search" placeholder="Cari simbol…" />
+          <select id="mode" class="select">
+            <option value="SWING_V1_CONS">Conservative Swing</option>
+            <option value="SWING_V1_AGGR">Aggressive Swing</option>
+          </select>
           <select id="filterSignal" class="select">
             <option value="ALL">Semua</option>
             <option value="BUY">BUY</option>
@@ -70,7 +74,7 @@
     </section>
 
     <footer class="footer">
-      <span class="mono">SWING_V1</span>
+      <span class="mono">SWING_V1 (2 mode)</span>
       <span>•</span>
       <span class="dim">Upload → Histori → Skor</span>
     </footer>
