--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
 
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+  
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
@@ -26,17 +28,19 @@
     </header>
 
     <section id="mainCard" class="card">
-      <div class="card-title">Upload Data Harian (.csv)</div>
+      <div class="card-title">Upload Data Harian (.csv / .xlsx)</div>
 
       <div class="row wrap">
         <label class="file">
-          <input id="fileInput" type="file" accept=".csv,text/csv" />
-          <span class="btn">Pilih File .csv</span>
+          <input id="fileInput" type="file" accept=".csv,text/csv,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
+          <span class="btn">Pilih File</span>
         </label>
 
+        <button id="btnConvert" class="btn ghost" disabled>Convert XLSX</button>
+        
         <button id="btnUpload" class="btn" disabled>Upload → Supabase</button>
         <button id="btnAnalyze" class="btn ghost" disabled>Analisis Swing</button>
-        </div>
+      </div>
 
       <div class="row wrap">
         <div class="pill" id="pillStatus">Status: menunggu file</div>
@@ -76,7 +80,6 @@
     </footer>
   </div>
 
-  <!-- Supabase (CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="./app.js"></script>
 </body>
