--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
 
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
   
   <link rel="stylesheet" href="./styles.css" />
 </head>
@@ -21,7 +22,7 @@
         <div class="logo">Σ</div>
         <div>
           <div class="title">Swing Signals</div>
-          <div class="subtitle">Upload CSV harian → simpan histori → deteksi sinyal swing</div>
+          <div class="subtitle">Batch Processing Support</div>
         </div>
       </div>
       <div class="top-actions"></div>
@@ -32,11 +33,11 @@
 
       <div class="row wrap">
         <label class="file">
-          <input id="fileInput" type="file" accept=".csv,text/csv,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
-          <span class="btn">Pilih File</span>
+          <input id="fileInput" type="file" multiple accept=".csv,text/csv,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
+          <span class="btn">Pilih File (Bisa Banyak)</span>
         </label>
 
-        <button id="btnConvert" class="btn ghost" disabled>Convert XLSX</button>
+        <button id="btnConvert" class="btn ghost" disabled>Convert & Zip</button>
         
         <button id="btnUpload" class="btn" disabled>Upload → Supabase</button>
         <button id="btnAnalyze" class="btn ghost" disabled>Analisis Swing</button>
@@ -68,7 +69,7 @@
         </div>
 
         <div class="hint">
-          Sinyal = rule-based scoring untuk disiplin swing, bukan ramalan.
+          Jika upload banyak file (bulk), analisis akan dilakukan berdasarkan tanggal terbaru yang ditemukan.
         </div>
       </div>
     </section>
