--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
           <div class="filter-group">
             <label>Signal:</label>
             <select id="filterSignal">
-              <option value="ALL">Semua</option>
-              <option value="BUY">BUY Only</option>
+              <option value="ALL">SEMUA</option>
+              <option value="BUY">BUY</option>
               <option value="SELL">SELL</option>
               <option value="WAIT">WAIT</option>
-              <option value="WATCHLIST">★ Watchlist</option>
+              <option value="WATCHLIST">WATCHLIST ★</option>
             </select>
           </div>
         </div>
