--- a/index.html
+++ b/index.html
@@ -57,13 +57,18 @@
           </div>
           
           <div class="filter-group">
-            <label>Signal:</label>
-            <select id="filterSignal">
-              <option value="ALL">SEMUA</option>
-              <option value="BUY">BUY</option>
-              <option value="SELL">SELL</option>
-              <option value="WAIT">WAIT</option>
-              <option value="WATCHLIST">WATCHLIST ★</option>
+            <label>Filter:</label> <select id="filterSignal">
+              <option value="ALL">Signal: All</option>
+              <option value="BUY">Signal: BUY</option>
+              <option value="SELL">Signal: SELL</option>
+              <option value="WAIT">Signal: WAIT</option>
+              <option value="WATCHLIST">★ Watchlist</option>
+            </select>
+          
+            <select id="filterCategory">
+              <option value="ALL">Type: All</option>
+              <option value="SHARIA">🕌 Syariah (ISSI/JII)</option>
+              <option value="NON">🏢 Non-Syariah</option>
             </select>
           </div>
         </div>
