--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="control-group">
-        <div id="adminControls" style="display:none; width:100%; gap:10px; flex-direction:column;">
+        <div id="adminControls" class="admin-buttons" style="display:none;">
           <label class="btn-primary-upload">
             <input id="fileInput" type="file" multiple accept=".csv,.xlsx" />
             <span>📂 Upload Data</span>
@@ -48,8 +48,8 @@
           <button id="btnAnalyze" class="btn-action" disabled>⚡ Analisis</button>
         </div>
 
-        <button id="btnLogin" class="btn-ghost" style="width:100%; border:1px solid var(--border); margin-top:10px;">🔒 Login Admin</button>
-        <button id="btnLogout" class="btn-ghost" style="display:none; width:100%; color:var(--sell); border:1px solid var(--sell);">Log Out</button>
+        <button id="btnLogin" class="btn-ghost" style="width:100%; border:1px solid var(--border); margin-top:auto;">🔒 Login Admin</button>
+        <button id="btnLogout" class="btn-ghost" style="display:none; width:100%; color:var(--sell); border:1px solid var(--sell); margin-top:auto;">Log Out</button>
       </div>
     </aside>
 
@@ -65,10 +65,10 @@
         <div class="tool-section center">
           <div class="filter-group">
             <select id="filterSignal">
-              <option value="ALL">Sinyal: Semua</option>
-              <option value="BUY">Sinyal: BUY</option>
-              <option value="SELL">Sinyal: SELL</option>
-              <option value="WAIT">Sinyal: WAIT</option>
+              <option value="ALL">Signal: Semua</option>
+              <option value="BUY">Signal: BUY</option>
+              <option value="SELL">Signal: SELL</option>
+              <option value="WAIT">Signal: WAIT</option>
               <option value="WATCHLIST">★ Watchlist</option>
             </select>
             <select id="filterCategory">
@@ -98,12 +98,12 @@
 
   <div id="loginModal" class="modal-overlay" style="display:none;">
     <div class="modal-content">
-      <h3 style="margin-top:0">Login Admin</h3>
+      <h3 style="margin-top:0; margin-bottom:16px;">Login Admin</h3>
       <input type="text" id="username" placeholder="Username" class="modal-input">
       <input type="password" id="password" placeholder="Password" class="modal-input">
       <div style="display:flex; gap:10px; margin-top:20px;">
-        <button id="btnSubmitLogin" class="btn-action">Masuk</button>
-        <button id="btnCloseLogin" class="btn-ghost">Batal</button>
+        <button id="btnSubmitLogin" class="btn-action" style="flex:1">Masuk</button>
+        <button id="btnCloseLogin" class="btn-ghost" style="flex:1">Batal</button>
       </div>
     </div>
   </div>
