--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           </label>
           <button id="btnConvert" class="btn-ghost" disabled>Convert</button>
           <button id="btnUpload" class="btn-ghost" disabled>Push DB</button>
-          <button id="btnAnalyze" class="btn-action" disabled>⚡ Analisis</button>
+          <button id="btnAnalyze" class="btn-action" disabled>📊 Analisis</button>
         </div>
 
         <div class="auth-buttons">
-          <button id="btnLogin" class="btn-ghost btn-login">🔒 Login Admin</button>
-          <button id="btnLogout" class="btn-ghost btn-logout" style="display:none;">Log Out</button>
+          <button id="btnLogin" class="btn-ghost btn-login">🔐 Masuk </button>
+          <button id="btnLogout" class="btn-ghost btn-logout" style="display:none;">🔓 Keluar</button>
         </div>
       </div>
     </aside>
