--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
 
         <div class="auth-buttons">
-          <button id="btnLogin" class="btn-ghost btn-login">🔐 Masuk </button>
-          <button id="btnLogout" class="btn-ghost btn-logout" style="display:none;">🔓 Keluar</button>
+          <button id="btnLogin" class="btn-action btn-login">🔐 Masuk </button>
+          <button id="btnLogout" class="btn-action btn-logout" style="display:none;">🔓 Keluar</button>
         </div>
       </div>
     </aside>
