--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div class="control-area">
         <div id="adminControls" class="admin-buttons" style="display:none;">
-          <div class="section-label">DATA DATA</div>
+          <div class="section-label">SIDEBAR</div>
           <label class="btn-primary">
             <input id="fileInput" type="file" multiple accept=".csv,.xlsx" />
             <span>📂 Upload Data</span>
